--- a/exercicios/ex22/fundo006.html
+++ b/exercicios/ex22/fundo006.html
@@ -7,16 +7,22 @@
     <title>Document</title>
     <style>
         body{
-            height: 100vh;
+           /* height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed; */
+
+            /* Shortgand - background color > image > position > repet > [size] > attachment
+             */
+             background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+             background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +33,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore neque esse praesentium expedita similique, necessitatibus iusto nemo reiciendis quas sapiente magnam aliquid illo debitis dignissimos voluptatibus sit. Magni, quas ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi quod nihil odit adipisci, in possimus quae doloribus eum. Distinctio autem animi harum modi, unde quasi voluptatum culpa error iste! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolore odio ad. Officia amet doloremque, sit explicabo ducimus eveniet quos ea perferendis distinctio cumque. Nulla nobis provident qui consequuntur quaerat.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore neque esse praesentium expedita similique, necessitatibus iusto nemo reiciendis quas sapiente magnam aliquid illo debitis dignissimos voluptatibus sit. Magni, quas ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi quod nihil odit adipisci, in possimus quae doloribus eum. Distinctio autem animi harum modi, unde quasi voluptatum culpa error iste! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolore odio ad. Officia amet doloremque, sit explicabo ducimus eveniet quos ea perferendis distinctio cumque. Nulla nobis provident qui consequuntur quaerat.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore neque esse praesentium expedita similique, necessitatibus iusto nemo reiciendis quas sapiente magnam aliquid illo debitis dignissimos voluptatibus sit. Magni, quas ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi quod nihil odit adipisci, in possimus quae doloribus eum. Distinctio autem animi harum modi, unde quasi voluptatum culpa error iste! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolore odio ad. Officia amet doloremque, sit explicabo ducimus eveniet quos ea perferendis distinctio cumque. Nulla nobis provident qui consequuntur quaerat.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore neque esse praesentium expedita similique, necessitatibus iusto nemo reiciendis quas sapiente magnam aliquid illo debitis dignissimos voluptatibus sit. Magni, quas ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi quod nihil odit adipisci, in possimus quae doloribus eum. Distinctio autem animi harum modi, unde quasi voluptatum culpa error iste! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolore odio ad. Officia amet doloremque, sit explicabo ducimus eveniet quos ea perferendis distinctio cumque. Nulla nobis provident qui consequuntur quaerat.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore neque esse praesentium expedita similique, necessitatibus iusto nemo reiciendis quas sapiente magnam aliquid illo debitis dignissimos voluptatibus sit. Magni, quas ipsam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eligendi quod nihil odit adipisci, in possimus quae doloribus eum. Distinctio autem animi harum modi, unde quasi voluptatum culpa error iste! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi dolore odio ad. Officia amet doloremque, sit explicabo ducimus eveniet quos ea perferendis distinctio cumque. Nulla nobis provident qui consequuntur quaerat.</p>
     </main>
 </body>
 </html>
