--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe{
+            height: 500px;
+            width: 500px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um Iframe</h1>
@@ -12,8 +19,11 @@
         Acessando o site do 
 
         <iframe src="https://www.cursoemvideo.com/cursos/" frameborder="0"></iframe>
+        para aprender cursos
         
-        para apender a programar.</p>
-        <p>O site do <iframe src="" frameborder="0"></iframe> também é muito legal</p>
+        <p>
+            site do 
+            <iframe src="https://www.youtube.com/watch?v=CmtD1UYZhh4" frameborder="0"></iframe> aparece?
+        </p>
 </body>
 </html>
