--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,7 @@
     <h1>teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore esse asperiores est voluptas cupiditate aliquid labore fugiat dicta eveniet optio laboriosam, similique corporis dolorum facere vitae in nihil odit reiciendis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, dolor. Dolore numquam corporis quisquam dolor a animi et, quo ex. Consequatur molestias alias iure fuga voluptatum assumenda eos sapiente excepturi!</p>
 
-    <iframe src="pagina001.html" frameborder="0" height="800" width="800"></iframe>
+    <iframe src="paginas-extras/pagina001.html" frameborder="0" height="800" width="800"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure animi vero eius, quod impedit tenetur ratione enim exercitationem provident, quidem error a, beatae ab natus eaque temporibus nemo asperiores officia?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, commodi ipsam atque molestias consequuntur ab inventore sint provident possimus ipsa alias tenetur iure modi suscipit minima sequi nesciunt iusto. Nostrum!</p>
 </body>
